# blocktest

./: .gitignore  .travis.yml  Cargo.toml  README.md
ci/: before_deploy.ps1  before_deploy.sh
content/python-simple/: my_component.md
examples/jade/: custom.jade  custom.py  output.txt
examples/python-simple/: my_component.md
examples/simple/: my_component.md  my_component.py  output.txt
src/: block.rs  buffer.rs  main.rs
tests/: check_examples.py
